k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-microservice-service
spec:
  type: ClusterIP
  selector:
    app: k8s-microservice
  ports:
  - port: 5000
    targetPort: 5000
